--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 body{background-color: #333333;}
 #make{border-radius: 5px;position: absolute;left: 100px;top: 75px;}
-#help{position: absolute;top: 600px;left: 100px;color: #ffffff;background-color: #335577;border-radius: 10px;}
+#help{position: absolute;top: 600px;left: 100px;color: #ffffff;background-color: #335577;border-radius: 5px;}
 a{color: #ccccff;}
 </style>
 </head>
@@ -28,6 +28,7 @@ a{color: #ccccff;}
 <p>A: 在头像链接输入三选一(man默认男，woman默认女，mht马化腾 )即可</p>
 <h1>地址转换器</h1>
 <input type="text" id="convert"/><button id="convertx" onclick="convert()">转换</button>
+<h1><a href=https://github.com/8bd8>https://github.com/8bd8</a></h1>
 </blockquote>
 </div>
 <div style="position: absolute;top: 1400px;">&quot;</div>
